2007-05-28  Jules Colding  <colding@omesc.com>

	* main.c (main): Prevent dup2() and close() on -1

2007-05-13  Matthew Barnes  <mbarnes@redhat.com>

	* e-shell.c (impl_Shell_handleURI):
	Revert the change from 2007-05-11.  (#407104)

2007-05-12  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #337616

	* Makefile.am: Add $(schema_DATA) to DISTCLEANFILES.

2007-05-11  Matthew Barnes  <mbarnes@redhat.com>

	* e-shell.c (impl_Shell_handleURI):
	Create a shell window if the schema or an alias was found.
	Previously this only opened a window if an alias was found
	but not the schema.  Makes the GNOME Clock applet able to
	correctly start Evolution once again.  (#407104)

2007-05-01  Matthew Barnes  <mbarnes@redhat.com>

	* main.c (show_development_warning):
	Bump stable version recommendation from 2.8.1 to 2.10.1.

2007-04-24  Matthew Barnes  <mbarnes@redhat.com>

	* main.c: #include <gtk/gtkcheckbutton.h>  (#433005)
	Patch from Daniel Gryniewicz.

2007-04-23  Srinivasa Ragavan  <sragavan@novell.com>

	* main.c: (main): Fix 2 build breaks if built with development version

2007-04-22  Stephen Cook  <siti@orcon.net.nz>
	
	* main.c: fix startup notification problem (closes: #271851)
	

2007-04-20  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #259606 from Michael Meeks

	* e-shell-marshal.list:
	* e-shell-window.c: (get_component_view),
	(sidebar_button_selected_callback),
	(sidebar_button_pressed_callback), (setup_widgets): Added support for
	middle click to open the component in new window.
	* e-shell.c:
	* e-sidebar.c: (button_pressed_callback),
	(boolean_handled_accumulator), (e_sidebar_class_init),
	(e_sidebar_add_button):
	* e-sidebar.h:

2007-04-19  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #429422

	* e-shell.c (impl_finalize):
	e_free_string_list() is dead; just do it manually.

	* e-user-creatable-items-handler.c (setup_toolbar_button):
	Use g_object_ref_sink() instead of gtk_object_sink().

	* e-shell-importer.c: